--- a/templates/home_screen.html
+++ b/templates/home_screen.html
@@ -33,10 +33,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./login.html">Log In</a>
+            <a class="nav-link" href="./login_screen.html">Log In</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-light" href="./register.html"
+            <a class="nav-link btn btn-outline-light" href="./register_screen.html"
               >Sign Up</a
             >
           </li>
