added report icon and edit icon for admin

--- a/templates/thread_screen/thread_screen_admin.html
+++ b/templates/thread_screen/thread_screen_admin.html
@@ -145,6 +145,18 @@
                   <!-- Text Button al lado derecho -->
                   <button
                     type="button"
+                    class="btn btn-link text-decoration-none text-dark"
+                  >
+                    <i class="fas fa-edit"></i>
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-link text-decoration-none"
+                  >
+                    <i class="fas fa-exclamation-circle"></i>
+                  </button>
+                  <button
+                    type="button"
                     class="btn btn-link text-decoration-none"
                   >
                     <i class="fas fa-trash btn-delete"></i>
@@ -210,6 +222,18 @@
                   <!-- Text Button al lado derecho -->
                   <button
                     type="button"
+                    class="btn btn-link text-decoration-none text-dark"
+                  >
+                    <i class="fas fa-edit"></i>
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-link text-decoration-none"
+                  >
+                    <i class="fas fa-exclamation-circle"></i>
+                  </button>
+                  <button
+                    type="button"
                     class="btn btn-link text-decoration-none"
                   >
                     <i class="fas fa-trash btn-delete"></i>
@@ -273,6 +297,18 @@
                   <!-- Espaciador para empujar el siguiente botón hacia la derecha -->
                   <div class="ml-auto"></div>
                   <!-- Text Button al lado derecho -->
+                  <button
+                    type="button"
+                    class="btn btn-link text-decoration-none text-dark"
+                  >
+                    <i class="fas fa-edit"></i>
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-link text-decoration-none"
+                  >
+                    <i class="fas fa-exclamation-circle"></i>
+                  </button>
                   <button
                     type="button"
                     class="btn btn-link text-decoration-none"
