--- a/templates/thread_screen/thread_screen_registered.html
+++ b/templates/thread_screen/thread_screen_registered.html
@@ -147,6 +147,12 @@
                     type="button"
                     class="btn btn-link text-decoration-none"
                   >
+                    <i class="fas fa-exclamation-circle"></i>
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-link text-decoration-none"
+                  >
                     <i class="fas fa-trash btn-delete"></i>
                   </button>
                 </div>
@@ -207,6 +213,12 @@
                   </button>
                   <!-- Espaciador para empujar el siguiente botón hacia la derecha -->
                   <div class="ml-auto"></div>
+                  <button
+                    type="button"
+                    class="btn btn-link text-decoration-none"
+                  >
+                    <i class="fas fa-exclamation-circle"></i>
+                  </button>
                 </div>
               </div>
             </div>
@@ -266,6 +278,12 @@
                   <!-- Espaciador para empujar el siguiente botón hacia la derecha -->
                   <div class="ml-auto"></div>
                   <!-- Text Button al lado derecho -->
+                  <button
+                    type="button"
+                    class="btn btn-link text-decoration-none"
+                  >
+                    <i class="fas fa-exclamation-circle"></i>
+                  </button>
                 </div>
               </div>
             </div>
