--- a/templates/style.css
+++ b/templates/style.css
@@ -1,19 +1,19 @@
 .card:hover {
-  transform: scale(1.05); 
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); 
+  transform: scale(1.05);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .navbar.bg-dark {
-  background-color: #004085 !important; 
+  background-color: #004085 !important;
 }
 
 .btn-primary {
-  background-color: #0069d9 !important; 
+  background-color: #0069d9 !important;
   border-color: #0062cc !important;
 }
 
 .btn-outline-light {
-  color: #f1f3f5 !important; 
+  color: #f1f3f5 !important;
   border-color: #f8f9fa !important;
 }
 
@@ -22,27 +22,27 @@
 }
 
 .text-dark {
-  color: #0063cc !important; 
+  color: #0063cc !important;
 }
 
 footer.bg-dark {
-  background-color: #004085 !important; 
+  background-color: #004085 !important;
 }
 
 i.fas {
-  color: #0063cc; 
+  color: #0063cc;
 }
 
 .card-title {
-  color: #006fe6; 
+  color: #006fe6;
 }
 
 .navbar .nav-item .nav-link {
-  color: #ffff; 
+  color: #ffff;
 }
 
 .navbar .nav-item .btn-outline-light:hover {
-  background-color: #006fe6; 
+  background-color: #006fe6;
   color: #fff;
 }
 
@@ -52,15 +52,35 @@ i.fas {
 }
 
 .btn-link-hover:hover {
-  color: #0056b3; 
-  text-decoration: underline; 
+  color: #0056b3;
+  text-decoration: underline;
 }
 
 .btn-delete {
-  color: rgba(
-    255,
-    0,
-    0,
-    0.813
-  ) !important;
+  color: rgba(255, 0, 0, 0.813) !important;
+}
+
+.text-truncate {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 500px; /* Asegura que tome todo el ancho disponible del contenedor padre */
+}
+
+@media (max-width: 980px) {
+  .text-truncate {
+    width: 380px; /* Ajusta según necesites para pantallas pequeñas */
+  }
+}
+
+@media (max-width: 768px) {
+  .text-truncate {
+    width: 240px; /* Ajusta según necesites para pantallas pequeñas */
+  }
+}
+
+@media (max-width: 480px) {
+  .text-truncate {
+    width: 150px; /* Ajusta según necesites para pantallas muy pequeñas */
+  }
 }
