--- a/templates/users_screen_admin.html
+++ b/templates/users_screen_admin.html
@@ -52,7 +52,7 @@
     </nav>
 
     <!-- content -->
-    <div class="container mt-5 flex-grow-1">
+    <div class="container mt-5 flex-grow-1 mb-3">
       <!-- Buscador -->
       <div class="col mb-3">
         <div class="input-group">
@@ -143,7 +143,7 @@
               title="Eliminar"
               style="text-decoration: none"
             >
-              <i class="fas fa-trash-alt"></i>
+              <i class="fas fa-trash-alt btn-delete"></i>
             </button>
           </div>
         </div>
@@ -177,49 +177,11 @@
               <i class="fas fa-edit"></i>
             </button>
             <button
-              class="btn btn-link text-danger p-0"
+              class="btn btn-link text-delete p-0"
               title="Eliminar"
               style="text-decoration: none"
             >
-              <i class="fas fa-trash-alt"></i>
-            </button>
-          </div>
-        </div>
-
-        <!-- Usuario 4 -->
-        <div
-          class="list-group-item d-flex align-items-center justify-content-between"
-        >
-          <div class="d-flex align-items-center">
-            <img
-              src="./images/perfil.jpg"
-              class="rounded-circle"
-              style="width: 50px; height: 50px"
-              alt="Foto de Usuario"
-            />
-            <strong class="ml-3">LaSillaDeTuTio</strong>
-          </div>
-          <div>
-            <button
-              class="btn btn-link text-primary p-0 mr-2"
-              title="Ver Perfil"
-              style="text-decoration: none"
-            >
-              <i class="fas fa-eye"></i>
-            </button>
-            <button
-              class="btn btn-link text-primary p-0 mr-2"
-              title="Editar"
-              style="text-decoration: none"
-            >
-              <i class="fas fa-edit"></i>
-            </button>
-            <button
-              class="btn btn-link text-danger p-0"
-              title="Eliminar"
-              style="text-decoration: none"
-            >
-              <i class="fas fa-trash-alt"></i>
+              <i class="fas fa-trash-alt btn-delete"></i>
             </button>
           </div>
         </div>
