added numberPosts of threads

--- a/backend/src/main/resources/templates/profile.html
+++ b/backend/src/main/resources/templates/profile.html
@@ -28,7 +28,7 @@
               class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
             >
               {{name}}
-              <span class="badge badge-primary badge-pill">1 posts</span>
+              <span class="badge badge-primary badge-pill">{{numberPosts}} posts</span>
             </a>
             {{/threads}}
             <a
