--- a/backend/src/main/resources/templates/profile.html
+++ b/backend/src/main/resources/templates/profile.html
@@ -19,6 +19,8 @@
         <button
           type="button"
           class="btn btn-link text-decoration-none btn-delete"
+          data-toggle="modal"
+          data-target="#deleteAccountModal"
         >
           <i class="fas fa-trash btn-delete"></i> Delete Account
         </button>
@@ -41,6 +43,43 @@
           >
         </a>
         {{/threads}}
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="deleteAccountModal"
+  tabindex="-1"
+  aria-labelledby="modalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalLabel">Confirm Deletion</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete your account? This action cannot be
+        undone.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+          Cancel
+        </button>
+        <a type="button" class="btn btn-danger btn-confirm-delete" href="/user/delete/{{username}}">
+          Delete Account
+        </a>
       </div>
     </div>
   </div>
