--- a/backend/src/main/resources/templates/header.html
+++ b/backend/src/main/resources/templates/header.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./login_screen.html">Log In</a>
+            <a class="nav-link" href="login">Log In</a>
           </li>
           <li class="nav-item">
             <a class="nav-link btn btn-outline-light" href="./register_screen.html"
