--- a/backend/src/main/resources/templates/users_template.html
+++ b/backend/src/main/resources/templates/users_template.html
@@ -3,16 +3,18 @@
 <!-- content -->
 <div class="container mt-5 flex-grow-1 mb-3">
   <!-- Buscador -->
-  <div class="col mb-3">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Buscar usuario..." />
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button">
-          <i class="fas fa-search"></i>
-        </button>
+  <form action="/user/users" method="GET">
+    <div class="col mb-3">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Find user..." name="username" />
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary" type="submit">
+            <i class="fas fa-search"></i>
+          </button>
+        </div>
       </div>
     </div>
-  </div>
+  </form>
 
   <!-- Lista de Usuarios -->
   <div class="list-group">
@@ -33,17 +35,15 @@
       <div>
         <div>
           <a
-            class="btn btn-link text-primary p-0 mr-2"
+            class="btn btn-link text-primary text-decoration-none p-0 mr-2"
             title="view profile"
-            style="text-decoration: none"
             href="/user/profile/{{username}}"
           >
             <i class="fas fa-eye"></i>
           </a>
           <button
-            class="btn btn-link text-primary p-0 mr-2"
+            class="btn btn-link text-primary text-decoration-none p-0 mr-2"
             title="edit profile"
-            style="text-decoration: none"
           >
             <i class="fas fa-edit"></i>
           </button>
