--- a/backend/src/main/resources/templates/users_template.html
+++ b/backend/src/main/resources/templates/users_template.html
@@ -41,12 +41,13 @@
           >
             <i class="fas fa-eye"></i>
           </a>
-          <button
+          <a
             class="btn btn-link text-primary text-decoration-none p-0 mr-2"
             title="edit profile"
+            href="/user/edit-profile?username={{username}}"
           >
             <i class="fas fa-edit"></i>
-          </button>
+          </a>
           <button
             type="button"
             class="btn btn-link text-decoration-none btn-delete p-0 mr-2"
