--- a/backend/src/main/resources/templates/header.html
+++ b/backend/src/main/resources/templates/header.html
@@ -30,6 +30,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      {{^logged}}
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -42,4 +43,6 @@
           </li>
         </ul>
       </div>
+      {{/logged}}
+      
     </nav>
