--- a/backend/src/main/resources/templates/login_error_template.html
+++ b/backend/src/main/resources/templates/login_error_template.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-</head>
-
-<body>
-  <div class="container">
-    <h2>Credenciales incorrectas</h2>
-    <a href="/login">Intentarlo de nuevo</a>
+{{>header}}
+  <div class="container mt-5 flex-grow-1">
+    <div class="mt-3">
+      <h2 class="text-danger">Wrong credentials</h2>
+      <p class="text-muted">Please check your username and password and try again.</p>
+      <a href="/login" class="btn btn-link">Try again</a>
+    </div>
   </div>
-</body>
-
-</html>
+{{>footer}}
