--- a/backend/src/main/resources/templates/login_template.html
+++ b/backend/src/main/resources/templates/login_template.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html>
-  <body>
+{{>header}}
+  <div class="container mt-5 flex-grow-1">
+    <!-- <div class="login-form">
     <form action="/login" method="post">
       <label>Username:</label><input type="text" name="username" /><br />
       <label>Password:</label><input type="password" name="password" /><br />
       <input type="submit" value="Sign In" />
     </form>
-  </body>
-</html>
+    </div> -->
+
+    <div class="container mt-5">
+      <form action="/login" method="post">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input type="text" class="form-control" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" value="Sign In "class="btn btn-primary">Sign In</button>
+      </form>
+    </div>
+  </div>
+{{>footer}}
