Register screen and navbar redirect

--- a/backend/src/main/resources/templates/header.html
+++ b/backend/src/main/resources/templates/header.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="login">Log In</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-light" href="./register_screen.html"
+            <a class="nav-link btn btn-outline-light" href="register"
               >Sign Up</a
             >
           </li>
