logo button now redirects properly

--- a/backend/src/main/resources/templates/header.html
+++ b/backend/src/main/resources/templates/header.html
@@ -18,7 +18,7 @@
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Inforum</a>
+      <a class="navbar-brand" href="/">Inforum</a>
       <button
         class="navbar-toggler"
         type="button"
