--- a/backend/src/main/resources/templates/header.html
+++ b/backend/src/main/resources/templates/header.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <link href="/css/style.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation Bar -->
