--- a/backend/src/main/resources/static/css/style.css
+++ b/backend/src/main/resources/static/css/style.css
@@ -12,6 +12,12 @@
   border-color: #0062cc !important;
 }
 
+.btn-outline-primary {
+  border-color: #0062cc;
+  background-color: white;
+  color: #0069d9;
+}
+
 .btn-outline-light {
   color: #f1f3f5 !important;
   border-color: #f8f9fa !important;
@@ -65,6 +71,10 @@ i.fas {
   white-space: nowrap;
   text-overflow: ellipsis;
   max-width: 500px; /* Asegura que tome todo el ancho disponible del contenedor padre */
+}
+
+.white-icon {
+  color: white !important;
 }
 
 @media (max-width: 980px) {
