--- a/backend/src/main/resources/templates/register.html
+++ b/backend/src/main/resources/templates/register.html
@@ -1,25 +1,58 @@
 {{>header}}
-<div class="container mt-5 flex-grow-1">
-    <div class="container mt-5">
-        <form action="/register" method="post">
-            <div class="form-group
-            ">
-            <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" name="username" required>
+
+<div class="container mt-4 flex-grow-1">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-md-6 col-lg-4">
+        <div class="registration-form bg-light mt-4 p-4">
+          <form action="/register" method="post" class="row g-3">
+            <div class="col-12 d-flex justify-content-center">
+              <h4 class="text-center mb-3">User Registration</h4>
+            </div>
+
+            <div class="col-12">
+              <label>Username</label>
+              <input
+                type="text"
+                name="username"
+                class="form-control"
+                placeholder="Username"
+                required
+              />
+            </div>
+            <div class="col-12 mt-2">
+              <label>Email</label>
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                placeholder="Email"
+                required
+              />
+            </div>
+            
+            <div class="col-12 mt-2">
+              <label>Password</label>
+              <input
+                type="password"
+                name="password"
+                class="form-control"
+                placeholder="Password"
+                required
+              />
+            </div>
+            <div class="col-12 d-flex justify-content-center mt-3">
+              <button type="submit" class="btn btn-primary col-12">Sign up</button>
+            </div>
+          </form>
+          <hr class="mt-4" />
+          <div class="col-12 text-center">
+            <p class="mb-0">
+              Already have an account? <a href="login">Log in</a>
+            </p>
+          </div>
         </div>
-        <div class="form-group
-        ">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password" name="password" required>
+      </div>
     </div>
-    <div class="form-group
-    ">
-    <label for="confirmPassword">Confirm Password:</label>
-    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
-</div>
-<button type="submit" value="Sign Up "class="btn btn-primary">Sign Up</button>
-</form>
-</div>
-</div>
+  </div>
 
 {{>footer}}
