view forums done

--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
       <div class="col-md-4 mb-3">
         <a href="#" class="card text-decoration-none text-dark">
           <div class="card-body text-center">
-            <i class="fas fa-laptop-code fa-3x"> </i>
+            <i class="fas fa-{{icon}} fa-3x"> </i>
             <h5 class="card-title mt-2">{{name}}</h5>
           </div>
         </a>
@@ -18,132 +18,13 @@
       {{^forums}}
       <div class="card-body text-center"><h5>No categories yet</h5></div>
       {{/forums}}
-<!--
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-laptop-code fa-3x"></i>
-            <h5 class="card-title mt-2">Technology</h5>
-          </div>
-        </a>
-      </div>
-
-      
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-flask fa-3x"></i>
-            <h5 class="card-title mt-2">Science</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-football-ball fa-3x"></i>
-            <h5 class="card-title mt-2">Sports</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-music fa-3x"></i>
-            <h5 class="card-title mt-2">Music</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-film fa-3x"></i>
-            <h5 class="card-title mt-2">Movies and Television</h5>
-          </div>
-        </a>
-      </div>
- 
-      <div class="col-md-4 mb-3">
-        <a
-          href="./forum_screen/forum_screen.html"
-          class="card text-decoration-none text-dark"
-        >
-          <div class="card-body text-center">
-            <i class="fas fa-book fa-3x"></i>
-            <h5 class="card-title mt-2">Books and Literature</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-utensils fa-3x"></i>
-            <h5 class="card-title mt-2">Gastronomy</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-plane fa-3x"></i>
-            <h5 class="card-title mt-2">Travel</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-gamepad fa-3x"></i>
-            <h5 class="card-title mt-2">Gaming</h5>
-          </div>
-        </a>
-      </div>
-      -->
     </div>
   
     <!-- Trending Categories -->
     
     <h2 class="mt-4">Trending Categories</h2>
     <div class="card-body text-center"><h5>No trending categories yet</h5></div>
-    <!--
-    <div class="row mb-3">
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-gamepad fa-3x"></i>
-            <h5 class="card-title mt-2">Gaming</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a
-          href="./forum_screen/forum_screen.html"
-          class="card text-decoration-none text-dark"
-        >
-          <div class="card-body text-center">
-            <i class="fas fa-book fa-3x"></i>
-            <h5 class="card-title mt-2">Books and Literature</h5>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <i class="fas fa-laptop-code fa-3x"></i>
-            <h5 class="card-title mt-2">Technology</h5>
-          </div>
-        </a>
-      </div>
--->
     </div>
   </div>
- */
+ 
   {{>footer}}
