final implementation email verification for account activation

--- a/backend/src/main/resources/templates/email_template.html
+++ b/backend/src/main/resources/templates/email_template.html
@@ -56,7 +56,7 @@
           your account and starting to use our services.
         </p>
         <p>Please click on the button below to activate your account:</p>
-        <a href="LINK" class="button">Activate Account</a>
+        <a href="{{activationUrl}}" class="button">Activate Account</a>
       </div>
       <div class="footer">
         <p>Thank you for joining Inforum. Let's unlock knowledge together.</p>
