--- a/backend/src/main/resources/templates/register.html
+++ b/backend/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-center align-items-center">
       <div class="col-md-6 col-lg-4">
         <div class="registration-form bg-light mt-4 p-4">
-          <form action="/register" method="post" class="row g-3">
+          <form action="/registerUser" method="post" class="row g-3">
             <div class="col-12 d-flex justify-content-center">
               <h4 class="text-center mb-3">User Registration</h4>
             </div>
