--- a/backend/src/main/resources/templates/header.html
+++ b/backend/src/main/resources/templates/header.html
@@ -35,34 +35,51 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="login">Log In</a>
+            <a class="nav-link" href="/login">Log In</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-light" href="register"
+            <a class="nav-link btn btn-outline-light" href="/register"
               >Sign Up</a
             >
           </li>
         </ul>
       </div>
-      {{/logged}}
-      {{#logged}}
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <button class="btn btn-info mr-2">
-              {{userName}}
-            </button>
-          </li>
-          <li class="nav-item">
-            <form action="/logout" method="post">
-              <button class="btn btn-danger" type="submit">Log Out</button>
-            </form>
-          </li>
-        </ul>
+      {{/logged}} {{#logged}}
+
+      <div class="ml-auto dropdown">
+        <button
+          class="btn dropdown-toggle"
+          type="button"
+          id="dropdownMenuButton"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          <img
+            src="/image/user/{{username}}"
+            class="rounded-circle"
+            alt="Profile"
+            style="width: 30px; height: 30px"
+          />
+        </button>
+        <div
+          class="dropdown-menu dropdown-menu-right"
+          aria-labelledby="dropdownMenuButton"
+        >
+          <a class="dropdown-item" href="/user/profile/{{username}}">View Profile</a>
+          <a class="dropdown-item" href="/user/edit-profile">Edit Profile</a>
+          <a class="dropdown-item" href="/chart">Statistics</a>
+          {{#admin}}
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/user/users">Users</a>
+          <a class="dropdown-item" href="#">Reported Posts</a>
+          {{/admin}}
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/logout">Log Out</a>
+        </div>
       </div>
-
-
-
 
       {{/logged}}
     </nav>
+  </body>
+</html>
