--- a/backend/src/main/resources/templates/register_done.html
+++ b/backend/src/main/resources/templates/register_done.html
@@ -1,9 +1,11 @@
 {{>header}}
-  <div class="container mt-5 flex-grow-1">
-    <div class="mt-3">
-      <h2 class="text-success">Registration Successful! You are now a member of Inforum. Welcome aboard!</h2>
-
-      <a href="login" class="btn btn-link">Log In</a>
-    </div>
+<div class="container mt-5 flex-grow-1">
+  <div class="mt-3">
+    <h3 class="text-success">
+      Registration Successful! You are now a member of Inforum. Welcome aboard!
+    </h3>
+    <br />
+    <a href="login" class="btn btn-link">Try to log In</a>
   </div>
+</div>
 {{>footer}}
