Register_done.html updated

--- a/backend/src/main/resources/templates/register_done.html
+++ b/backend/src/main/resources/templates/register_done.html
@@ -5,7 +5,7 @@
       Registration Successful! You are now a member of Inforum. Welcome aboard!
     </h3>
     <br />
-    <a href="login" class="btn btn-link">Try to log In</a>
+    <a href="login">Try to log In</a>
   </div>
 </div>
 {{>footer}}
