--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -14,12 +14,15 @@
         </h2>
         <!-- Botón post -->
         <div class="">
+          {{#isOwnerOrAdmin}}
           <button
             type="button"
             class="btn btn btn-link text-decoration-none btn-delete"
           >
             Delete Thread
           </button>
+          {{/isOwnerOrAdmin}}
+          {{#logged}}
           <button
             type="button"
             class="btn btn-outline-primary"
@@ -28,6 +31,7 @@
           >
             Add Post
           </button>
+          {{/logged}}
         </div>
       </div>
 
@@ -40,15 +44,15 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
                   <img
-                    src="../images/perfil.jpg"
+                    src="/image/user/{{username}}"
                     alt="Imagen de perfil"
                     class="rounded-circle mr-2"
                     style="width: 30px; height: 30px"
                   />
-                  <h6 class="mb-0">CosmereCrafter</h6>
+                  <h6 class="mb-0">{{username}}</h6>
                 </div>
                 <div class="text-muted">
-                  <small>3 hours ago</small>
+                  <small>{{elapsedTime}}</small>
                 </div>
               </div>
             </div>
@@ -56,18 +60,14 @@
             <div class="card-body">
               <!-- Contenido del Post -->
               <p class="card-text">
-                Has anyone else been fascinated by Hoid's appearances across the
-                Cosmere? In "The Stormlight Archive", his interactions hint at a
-                deeper involvement in the events of Roshar. What are your
-                theories on his ultimate goals and his mysterious abilities to
-                traverse the Cosmere?
+                {{text}}
               </p>
             </div>
 
             <!-- Imagen Principal del Post, ahora más pequeña y al final del card -->
             <div class="d-flex justify-content-center pb-3">
               <img
-                src="../images/foto_post.JPG"
+                src="/image/post/{{id}}"
                 class="img-fluid"
                 style="max-width: 50%"
                 alt="..."
@@ -81,18 +81,22 @@
                 type="button"
                 class="btn btn-link text-decoration-none text-dark mr-2"
               >
-                <i class="fas fa-thumbs-up"></i> 1.1K
+                <i class="fas fa-thumbs-up"></i> {{likes}}
               </button>
               <span class="text-muted mx-2">|</span>
               <button
                 type="button"
                 class="btn btn-link text-decoration-none text-dark"
               >
-                <i class="fas fa-thumbs-down"></i> 1.2K
+                <i class="fas fa-thumbs-down"></i> {{dislikes}}
               </button>
               <!-- Espaciador para empujar el siguiente botón hacia la derecha -->
               <div class="ml-auto"></div>
-              <!-- Text Button al lado derecho -->
+              <!-- Text Button al lado derecho -->              
+              <button type="button" class="btn btn-link text-decoration-none">
+                <i class="fas fa-exclamation-circle"></i>
+              </button>
+              {{#isOwner}}
               <button
                 type="button"
                 class="btn btn-link text-decoration-none text-dark"
@@ -100,153 +104,13 @@
                 <i class="fas fa-edit"></i>
               </button>
               <button type="button" class="btn btn-link text-decoration-none">
-                <i class="fas fa-exclamation-circle"></i>
-              </button>
-              <button type="button" class="btn btn-link text-decoration-none">
                 <i class="fas fa-trash btn-delete"></i>
               </button>
+              {{/isOwner}}
             </div>
           </div>
         </div>
         {{/posts}}
-        <!-- Repetir para más posts -->
-        <!-- Post 2 -->
-        <div class="col-12 mb-3">
-          <div class="card no-hover">
-            <div class="card-header bg-white">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex align-items-center">
-                  <img
-                    src="../images/perfil.jpg"
-                    alt="Imagen de perfil"
-                    class="rounded-circle mr-2"
-                    style="width: 30px; height: 30px"
-                  />
-                  <h6 class="mb-0">ShardSeeker</h6>
-                </div>
-                <div class="text-muted">
-                  <small>5 hours ago</small>
-                </div>
-              </div>
-            </div>
-
-            <div class="card-body">
-              <!-- Contenido del Post -->
-              <p class="card-text">
-                Discussing the Shards Honor, Cultivation, and Odium, it's clear
-                their influence is profound on the world of Roshar. How do you
-                see the conflict between these Shards affecting the larger
-                Cosmere, especially considering the events in "Oathbringer"?
-              </p>
-            </div>
-
-            <!-- Sin imageen-->
-
-            <!-- Botones de Me gusta y No me gusta -->
-            <div
-              class="card-footer bg-transparent d-flex justify-content-start align-items-center"
-            >
-              <button
-                type="button"
-                class="btn btn-link text-decoration-none text-dark mr-2"
-              >
-                <i class="fas fa-thumbs-up"></i> 1.1K
-              </button>
-              <span class="text-muted mx-2">|</span>
-              <button
-                type="button"
-                class="btn btn-link text-decoration-none text-dark"
-              >
-                <i class="fas fa-thumbs-down"></i> 1.2K
-              </button>
-              <!-- Espaciador para empujar el siguiente botón hacia la derecha -->
-              <div class="ml-auto"></div>
-              <!-- Text Button al lado derecho -->
-              <button
-                type="button"
-                class="btn btn-link text-decoration-none text-dark"
-              >
-                <i class="fas fa-edit"></i>
-              </button>
-              <button type="button" class="btn btn-link text-decoration-none">
-                <i class="fas fa-exclamation-circle"></i>
-              </button>
-              <button type="button" class="btn btn-link text-decoration-none">
-                <i class="fas fa-trash btn-delete"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <!-- Post 3 -->
-        <div class="col-12 mb-3">
-          <div class="card no-hover">
-            <div class="card-header bg-white">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex align-items-center">
-                  <img
-                    src="../images/perfil.jpg"
-                    alt="Imagen de perfil"
-                    class="rounded-circle mr-2"
-                    style="width: 30px; height: 30px"
-                  />
-                  <h6 class="mb-0">InterworldTraveler</h6>
-                </div>
-                <div class="text-muted">
-                  <small>5 hours ago</small>
-                </div>
-              </div>
-            </div>
-
-            <div class="card-body">
-              <!-- Contenido del Post -->
-              <p class="card-text">
-                Discussing the Shards Honor, Cultivation, and Odium, it's clear
-                their influence is profound on the world of Roshar. How do you
-                see the conflict between these Shards affecting the larger
-                Cosmere, especially considering the events in "Oathbringer"?
-              </p>
-            </div>
-
-            <!-- Sin imageen-->
-
-            <!-- Botones de Me gusta y No me gusta -->
-            <div
-              class="card-footer bg-transparent d-flex justify-content-start align-items-center"
-            >
-              <button
-                type="button"
-                class="btn btn-link text-decoration-none text-dark mr-2"
-              >
-                <i class="fas fa-thumbs-up"></i> 1.1K
-              </button>
-              <span class="text-muted mx-2">|</span>
-              <button
-                type="button"
-                class="btn btn-link text-decoration-none text-dark"
-              >
-                <i class="fas fa-thumbs-down"></i> 1.2K
-              </button>
-              <!-- Espaciador para empujar el siguiente botón hacia la derecha -->
-              <div class="ml-auto"></div>
-              <!-- Text Button al lado derecho -->
-              <button
-                type="button"
-                class="btn btn-link text-decoration-none text-dark"
-              >
-                <i class="fas fa-edit"></i>
-              </button>
-              <button type="button" class="btn btn-link text-decoration-none">
-                <i class="fas fa-exclamation-circle"></i>
-              </button>
-              <button type="button" class="btn btn-link text-decoration-none">
-                <i class="fas fa-trash btn-delete"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <!-- Repetir -->
       </div>
     </div>
 
