Added Images to Posts
Also linked Threads in profiles

--- a/backend/src/main/resources/templates/profile.html
+++ b/backend/src/main/resources/templates/profile.html
@@ -34,7 +34,7 @@
       <div class="list-group mb-3">
         {{#threads}}
         <a
-          href="url-del-hilo-2"
+          href="/t/{{name}}"
           class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
         >
           {{name}}
