--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -65,6 +65,7 @@
             </div>
 
             <!-- Imagen Principal del Post, ahora más pequeña y al final del card -->
+            {{#hasImage}}
             <div class="d-flex justify-content-center pb-3">
               <img
                 src="/image/post/{{id}}"
@@ -73,6 +74,7 @@
                 alt="..."
               />
             </div>
+            {{/hasImage}}
 
             <div
               class="card-footer bg-transparent d-flex justify-content-start align-items-center"
