Link back to forum by pressing the icon next to the thread name

--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -10,7 +10,7 @@
       >
         <!-- Título de la Categoría con Icono -->
         <h2 class="mb-0 col-8">
-          <i class="fas fa-{{forumIcon}} fa-lg"></i> {{threadName}}
+          <a href="/f/{{forumName}}"><i class="fas fa-{{forumIcon}} fa-lg"></i></a> {{threadName}}
         </h2>
         <!-- Botón post -->
         <div class="">
