--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <div class="row">
       {{#forums}}
       <div class="col-md-4 mb-3">
-        <a href="#" class="card text-decoration-none text-dark">
+        <a href="/f/{{name}}" class="card text-decoration-none text-dark">
           <div class="card-body text-center">
             <i class="fas fa-{{icon}} fa-3x"> </i>
             <h5 class="card-title mt-2">{{name}}</h5>
