--- a/backend/src/main/resources/templates/forum.html
+++ b/backend/src/main/resources/templates/forum.html
@@ -1,22 +1,24 @@
 {{>header}}
-<!-- Main Content -->
 <div class="container mt-4 flex-grow-1">
-    <!-- Categories -->
-    <h2>{{forum.name}}</h2>
-    <div class="row">
-      {{#threads}}
-      <div class="col-md-4 mb-3">
-        <a href="/t/{{name}}" class="card text-decoration-none text-dark">
-          <div class="card-body text-center">
-            <h5 class="card-title mt-2">{{name}}</h5>
-            <h5>{{numberPosts}}</h5>
-          </div>
-        </a>
-      </div>
-      {{/threads}}
-      {{^threads}}
-      <div class="card-body text-center"><h5>No threads yet</h5></div>
-      {{/threads}}
+  <h2 class="mb-0 col-8">
+    <i class="fas fa-{{forum.icon}} fa-lg"></i>{{forum.name}}</h2> <br>
+  <div class="row">
+    {{#threads}}
+    <div class="col-md-6 mb-3">
+      <a href="/t/{{name}}" class="card text-decoration-none text-dark">
+        <div class="card-body text-center">
+          <h5 class="card-title mt-2">{{name}}</h5>
+          <p class="card-text">Posts: {{numberPosts}}</p>
+        </div>
+      </a>
     </div>
+    {{/threads}}
+    {{^threads}}
+    <div class="card-body text-center">
+      <h5>No threads yet</h5>
+    </div>
+    {{/threads}}
+  </div>
 </div>
 {{>footer}}
+
