--- a/backend/src/main/resources/templates/forum.html
+++ b/backend/src/main/resources/templates/forum.html
@@ -1,24 +1,45 @@
 {{>header}}
+
 <div class="container mt-4 flex-grow-1">
-  <h2 class="mb-0 col-8">
-    <i class="fas fa-{{forum.icon}} fa-lg"></i>{{forum.name}}</h2> <br>
   <div class="row">
-    {{#threads}}
-    <div class="col-md-6 mb-3">
-      <a href="/t/{{name}}" class="card text-decoration-none text-dark">
-        <div class="card-body text-center">
-          <h5 class="card-title mt-2">{{name}}</h5>
-          <p class="card-text">Posts: {{numberPosts}}</p>
-        </div>
-      </a>
+    <!-- Columna de Hilos del Foro -->
+    <div class="col-md-8 mb-3">
+      <!-- Título de la Categoría con Icono -->
+      <h2><i class="fas fa-{{forum.icon}} fa-lg mb-1"></i> {{forum.name}}</h2>
+      <div class="list-group">
+        {{#threads}}
+        <a
+          href="/t/{{name}}"
+          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >{{name}}
+          <span class="badge badge-primary badge-pill"
+            >{{numberPosts}} posts</span
+          >
+        </a>
+        {{/threads}}
+      </div>
+      {{^threads}}
+      <div class="card-body text-center">
+        <h5>No threads yet</h5>
+      </div>
+      {{/threads}}
     </div>
-    {{/threads}}
-    {{^threads}}
-    <div class="card-body text-center">
-      <h5>No threads yet</h5>
+    <!-- Lista de Categorías -->
+    <div class="col-md-4 mb-3">
+      <h2 class="">Categories</h2>
+      <div class="list-group mb-3">
+        <!-- Categorías -->
+        {{#forums}}
+        <a
+          href="/f/{{name}}"
+          class="list-group-item list-group-item-action d-flex align-items-center"
+        >
+          <i class="fas fa-{{icon}} mr-2"></i> {{name}}
+        </a>
+        {{/forums}}
+      </div>
     </div>
-    {{/threads}}
   </div>
 </div>
-{{>footer}}
 
+{{>footer}}
