Added New thread button
Not working yet

--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -13,7 +13,7 @@
           <a href="/f/{{forumName}}"><i class="fas fa-{{forumIcon}} fa-lg"></i></a> {{threadName}}
         </h2>
         <!-- Botón post -->
-        <div class="">
+        <div>
           {{#isOwnerOrAdmin}}
           <button
             type="button"
