--- a/backend/src/main/resources/templates/forum.html
+++ b/backend/src/main/resources/templates/forum.html
@@ -4,8 +4,23 @@
   <div class="row">
     <!-- Columna de Hilos del Foro -->
     <div class="col-md-8 mb-3">
-      <!-- Título de la Categoría con Icono -->
-      <h2><i class="fas fa-{{forum.icon}} fa-lg mb-1"></i> {{forum.name}}</h2>
+      <div
+        class="col-12 d-flex justify-content-between align-items-center mb-3"
+      >
+        <!-- Título de la Categoría con Icono -->
+        <h2><i class="fas fa-{{forum.icon}} fa-lg mb-1"></i> {{forum.name}}</h2>
+        <!-- Botón thread -->
+        {{#logged}}
+        <button
+          type="button"
+          class="btn btn-outline-primary"
+          data-toggle="modal"
+          data-target="#uploadModal"
+        >
+          New thread
+        </button>
+        {{/logged}}
+      </div>
       <div class="list-group">
         {{#threads}}
         <a
