implement search user

--- a/backend/src/main/resources/templates/users_template.html
+++ b/backend/src/main/resources/templates/users_template.html
@@ -29,7 +29,7 @@
     <button
       class="btn btn-primary px-5"
       id="loadMoreUsersButton"
-      onclick="addNewElements();"
+      onclick="loadMoreUsers();"
     >
       Load More Users
     </button>
