--- a/backend/src/main/resources/templates/users_template.html
+++ b/backend/src/main/resources/templates/users_template.html
@@ -35,12 +35,9 @@
     </button>
   </div>
 
-  <div id="spinner" class="text-center">
-    <div class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
+  {{>spinner_template}}
 </div>
 
 <script src="/js/users.js"></script>
+<script src="/js/spinner.js"></script>
 {{>footer}}
