--- a/backend/src/main/resources/static/css/style.css
+++ b/backend/src/main/resources/static/css/style.css
@@ -77,6 +77,14 @@ i.fas {
   color: white !important;
 }
 
+i.liked {
+  color: rgb(18, 212, 18);
+}
+
+i.disliked {
+  color: rgba(255, 0, 0, 0.813);
+}
+
 @media (max-width: 980px) {
   .text-truncate {
     width: 380px; /* Ajusta según necesites para pantallas pequeñas */
