--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -78,17 +78,23 @@
               class="card-footer bg-transparent d-flex justify-content-start align-items-center"
             >
               <button
+                id="likes"
                 type="button"
                 class="btn btn-link text-decoration-none text-dark mr-2"
+                onclick="toggleLike(this);"
+                data-liked="false"
               >
-                <i class="fas fa-thumbs-up"></i> {{likes}}
+                <i id="likeIcon" class="fas fa-thumbs-up"></i> <span id="likeText">{{likes}}</span>
               </button>
               <span class="text-muted mx-2">|</span>
               <button
+                id="dislikes"
                 type="button"
                 class="btn btn-link text-decoration-none text-dark"
+                onclick="toggleDislike(this);"
+                data-disliked="false"
               >
-                <i class="fas fa-thumbs-down"></i> {{dislikes}}
+                <i id="dislikeIcon" class="fas fa-thumbs-down"></i> <span id="dislikeText">{{dislikes}}</span>
               </button>
               <!-- Espaciador para empujar el siguiente botón hacia la derecha -->
               <div class="ml-auto"></div>
@@ -193,4 +199,5 @@
   </div>
 </div>
 
+<script src="/js/likes.js"></script>
 {{>footer}}
