--- a/backend/src/main/resources/templates/forum.html
+++ b/backend/src/main/resources/templates/forum.html
@@ -2,14 +2,12 @@
 
 <div class="container mt-4 flex-grow-1">
   <div class="row">
-    <!-- Columna de Hilos del Foro -->
     <div class="col-md-8 mb-3">
       <div
         class="col-12 d-flex justify-content-between align-items-center mb-3"
       >
-        <!-- Título de la Categoría con Icono -->
         <h2><i class="fas fa-{{forum.icon}} fa-lg mb-1"></i> {{forum.name}}</h2>
-        <!-- Botón thread -->
+
         {{#logged}}
         <button
           type="button"
@@ -21,17 +19,9 @@
         </button>
         {{/logged}}
       </div>
-      <div class="list-group">
-        {{#threads}}
-        <a
-          href="/t/{{name}}"
-          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >{{name}}
-          <span class="badge badge-primary badge-pill"
-            >{{numberPosts}} posts</span
-          >
-        </a>
-        {{/threads}}
+      <div class="list-group" id="thread-container"></div>
+      <div class="text-center mt-3">
+        {{>spinner_template}} {{>add_more_elements_button_template}}
       </div>
       {{^threads}}
       <div class="card-body text-center">
@@ -39,11 +29,10 @@
       </div>
       {{/threads}}
     </div>
-    <!-- Lista de Categorías -->
+
     <div class="col-md-4 mb-3">
       <h2 class="">Categories</h2>
-      <div class="list-group mb-3">
-        <!-- Categorías -->
+      <div class="list-group mb-3" id="thread-container">
         {{#forums}}
         <a
           href="/f/{{name}}"
@@ -56,5 +45,9 @@
     </div>
   </div>
 </div>
+
+<script src="/js/forum.js"></script>
+<script src="/js/paginated.js"></script>
+<script src="/js/spinner.js"></script>
 
 {{>footer}}
