--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -186,7 +186,7 @@
         </button>
       </div>      
       <!-- Formulario -->
-      <form id="uploadForm" action="/t/addPost" method="post">
+      <form id="uploadForm" action="/t/{{threadName}}/addPost" method="post">
         <div class="modal-body">
           <!-- Campo de texto -->
           <div class="form-group">
